@@ -1,3 +1,8 @@
+2006-09-22  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl:  Added a benign SSL certificate check to warn about
+	               expired and self-signed certificates.
+
 2006-09-21  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl (tkchat::PasteDlg): Doh! Scrollbar hooked to old
